--- a/charts/trino/values.yaml
+++ b/charts/trino/values.yaml
@@ -579,7 +579,7 @@ coordinator:
     memory:
       heapHeadroomPerNode: ""
     nodeScheduler:
-      includeCoordinator: false
+      includeCoordinator: true
       # coordinator.config.nodeScheduler.includeCoordinator -- Allows scheduling work on the coordinator so that a
       # single machine can function as both coordinator and worker. For large clusters, processing work on the
       # coordinator can negatively impact query performance because the machine's resources are not available for the
