--- a/charts/trino/values.yaml
+++ b/charts/trino/values.yaml
@@ -489,11 +489,11 @@ shareProcessNamespace:
 service:
   annotations: {}
   type: ClusterIP
-  port: 8080
+  port: 8443
   # service.nodePort -- The port the service listens on the host, for the `NodePort` type. If not set, Kubernetes will
   # [allocate a port
   # automatically](https://kubernetes.io/docs/concepts/services-networking/service/#nodeport-custom-port).
-  nodePort: ""
+  nodePort: 30443
 
 auth: {}
 # auth -- Available authentication methods.
