--- a/charts/trino/templates/configmap-coordinator.yaml
+++ b/charts/trino/templates/configmap-coordinator.yaml
@@ -59,7 +59,7 @@ data:
     # {{- if .Values.coordinator.config.memory.heapHeadroomPerNode }}
     # memory.heap-headroom-per-node={{ .Values.coordinator.config.memory.heapHeadroomPerNode }}
     # {{- end }}
-    discovery.uri=https://trino-coordinator:{{ .Values.service.config.https.port }}
+    discovery.uri=https://{{ template "trino.coordinator" . }}:{{ .Values.service.config.https.port }}
     # {{- if .Values.server.config.authenticationType }}
     http-server.process-forwarded=true
     http-server.authentication.type={{ .Values.server.config.authenticationType }}
