--- a/charts/trino/templates/deployment-coordinator.yaml
+++ b/charts/trino/templates/deployment-coordinator.yaml
@@ -55,7 +55,7 @@ spec:
       volumes:
         - name: config-volume
           configMap:
-            name: {{ template "trino.coordinator" . }}
+            name: {{ template "trino.coordinator" . }}-config
         {{- if or .Values.catalogs .Values.additionalCatalogs }}
         - name: catalog-volume
           configMap:
