--- a/charts/trino/templates/secret.yaml
+++ b/charts/trino/templates/secret.yaml
@@ -8,7 +8,7 @@ metadata:
     {{- include "trino.labels" . | nindent 4 }}
 data:
 {{- if .Values.auth.passwordAuth }}
-  password.db: {{ .Values.auth.passwordAuth | b64enc }}
+  pwd.db: {{ .Values.auth.passwordAuth | b64enc }}
 {{- end }}
 {{- end }}
 ---
