--- a/charts/trino/templates/configmap-coordinator.yaml
+++ b/charts/trino/templates/configmap-coordinator.yaml
@@ -204,4 +204,4 @@ metadata:
     app.kubernetes.io/component: coordinator
 data:
   private_key.pem: |
-    {{ .Files.Get "path/to/private_key.pem" | nindent 4 }}
+    {{ .Files.Get "path/to/private_key.pem" }}
