--- a/charts/trino/values.yaml
+++ b/charts/trino/values.yaml
@@ -48,12 +48,12 @@ server:
     trino:
       level: INFO
   config:
-    path: /etc/trino
+    path: /etc/trino/
     https:
       enabled: false
       port: 8443
       keystore:
-        path: /etc/trino/private_key.pem
+        path: /etc/trino/
     # -- Trino supports multiple [authentication
     # types](https://trino.io/docs/current/security/authentication-types.html):
     # PASSWORD, CERTIFICATE, OAUTH2, JWT, KERBEROS.
