--- a/charts/trino/values.yaml
+++ b/charts/trino/values.yaml
@@ -57,7 +57,7 @@ server:
     # -- Trino supports multiple [authentication
     # types](https://trino.io/docs/current/security/authentication-types.html):
     # PASSWORD, CERTIFICATE, OAUTH2, JWT, KERBEROS.
-    authenticationType: ""
+    authenticationType: PASSWORD
     query:
       maxMemory: "4GB"
   exchangeManager: {}
