--- a/charts/trino/templates/configmap-worker.yaml
+++ b/charts/trino/templates/configmap-worker.yaml
@@ -13,6 +13,7 @@ data:
     node.environment={{ tpl .Values.server.node.environment . }}
     node.data-dir={{ .Values.server.node.dataDir }}
     plugin.dir={{ .Values.server.node.pluginDir }}
+    node.id={{ template "trino.worker" . }}
   {{- range $configValue := .Values.additionalNodeProperties }}
     {{ $configValue }}
   {{- end }}
@@ -34,9 +35,9 @@ data:
     -Djdk.nio.maxCachedBufferSize=2000000
     -Dfile.encoding=UTF-8
 #-Djava.io.tmpdir=./jtempdir
--XX:+EnableDynamicAgentLoading
--XX:+UnlockDiagnosticVMOptions
--XX:G1NumCollectionsKeepPinned=10000000
+    -XX:+EnableDynamicAgentLoading
+    -XX:+UnlockDiagnosticVMOptions
+    -XX:G1NumCollectionsKeepPinned=10000000
   {{/* only check the version number if the image is not overriden in any way */}}
   {{- with .Values.image -}}
   {{- if and (eq .repository "trinodb/trino") (not .useRepositoryAsSoleImageReference) (not .registry) (not .digest) (gt (default $.Chart.AppVersion .tag | int ) 447 ) }}
@@ -54,19 +55,20 @@ data:
 
   config.properties: |
     coordinator=false
+    node-scheduler.include-coordinator=false
     http-server.http.port={{ .Values.service.port }}
     # query.max-memory={{ .Values.server.config.query.maxMemory }}
     # query.max-memory-per-node={{ .Values.worker.config.query.maxMemoryPerNode }}
     # {{- if .Values.worker.config.memory.heapHeadroomPerNode }}
     # memory.heap-headroom-per-node={{ .Values.worker.config.memory.heapHeadroomPerNode }}
     # {{- end }}
-    discovery.uri=https://{{ template "trino.coordinator" . }}:{{ .Values.service.server.config.port }}
+    discovery.uri=https://{{ template "trino.coordinator" . }}:{{ .Values.service.nodePort }}
     http-server.process-forwarded=true
-    http-server.authentication.type=PASSWORD
-    password-authenticator.config-files=/etc/trino/password-authenticator.properties
+    http-server.authentication.type={{ .Values.server.config.authenticationType }}
+    password-authenticator.config-files={{ .Values.server.config.path }}password-authenticator.properties
     http-server.https.enabled=true
-    http-server.https.port=8443
-    http-server.https.keystore.path=/etc/trino/private_key.pem
+    http-server.https.port={{ .Values.server.config.https.port }}
+    http-server.https.keystore.path={{ .Values.server.config.path }}private_key.pem
     internal-communication.shared-secret=ABCXYZ123
     internal-communication.https.required=true
     # {{- range $configValue := .Values.additionalConfigProperties }}
@@ -86,7 +88,7 @@ data:
 {{- if contains "PASSWORD" .Values.server.config.authenticationType }}{{- if not (index .Values.coordinator.additionalConfigFiles "password-authenticator.properties") }}
   password-authenticator.properties: |
     password-authenticator.name=file
-    file.password-file=/etc/trino/pwd.db
+    file.password-file={{ .Values.server.config.path }}pwd.db
   {{- end }}{{- end }}
 
 {{- if .Values.worker.gracefulShutdown.enabled }}
