--- a/charts/trino/templates/service-coordinator.yaml
+++ b/charts/trino/templates/service-coordinator.yaml
@@ -12,10 +12,10 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
+    - port: {{ .Values.server.config.https.port }}
+      targetPort: {{ .Values.server.config.https.port }}
       protocol: TCP
-      name: http
+      name: https
       {{- if .Values.service.nodePort }}
       nodePort: {{ .Values.service.nodePort }}
       {{- end }}
