--- a/charts/trino/templates/deployment-coordinator.yaml
+++ b/charts/trino/templates/deployment-coordinator.yaml
@@ -143,7 +143,7 @@ spec:
           volumeMounts:
             - mountPath: {{ .Values.server.config.path }}
               name: config-volume
-            - mountPath: {{ .Values.server.config.path }}
+            - mountPath: {{ .Values.server.config.path }}security/
               name: ssl-volume
             {{- if or .Values.catalogs .Values.additionalCatalogs }}
             - mountPath: {{ .Values.server.config.path }}/catalog
@@ -188,7 +188,7 @@ spec:
               {{- end }}
             {{- end }}
             {{- if or .Values.auth.passwordAuth .Values.auth.passwordAuthSecret }}
-            - mountPath: {{ .Values.server.config.path }}
+            - mountPath: {{ .Values.server.config.path }}auth/
               name: file-password-authentication-volume
             {{- end }}
             {{- if or .Values.auth.groups .Values.auth.groupsAuthSecret }}
@@ -199,8 +199,11 @@ spec:
             {{- . | toYaml | nindent 12 }}
             {{- end }}
           ports:
+            - name: http
+              containerPort: {{ .Values.service.port }}
+              protocol: TCP
             - name: https
-              containerPort: {{ .Values.server.config.port }}
+              containerPort: {{ .Values.server.config.https.port }}
               protocol: TCP
             {{- if $coordinatorJmx.enabled }}
             - name: jmx-registry
