--- a/charts/trino/values.yaml
+++ b/charts/trino/values.yaml
@@ -495,7 +495,7 @@ service:
   # automatically](https://kubernetes.io/docs/concepts/services-networking/service/#nodeport-custom-port).
   nodePort: 30443
 
-auth: {}
+auth:
 # auth -- Available authentication methods.
 # @raw
 # Use username and password provided as a [password file](https://trino.io/docs/current/security/password-file.html#file-format):
