--- a/charts/trino/templates/service-worker.yaml
+++ b/charts/trino/templates/service-worker.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "trino.fullname" . }}-worker
+  name: {{ template "trino.worker" . }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "trino.labels" . | nindent 4 }}
